Bug 237564 - desktop containments inconsistencies in plasma-netbook
Summary: desktop containments inconsistencies in plasma-netbook
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: plasma-netbook (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Marco Martin
URL:
Keywords:
: 228286 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-05-14 02:13 UTC by David Palacio
Modified: 2010-07-30 14:49 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (766.72 KB, image/png)
2010-05-14 15:42 UTC, David Palacio
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Palacio 2010-05-14 02:13:39 UTC
Version:            (using KDE 4.4.3)
OS:                Linux
Installed from:    Debian testing/unstable Packages

When using containments not designed for plasma-netbook (desktop, folderview), these behave different to native containments (search and launch, newspaper).

* Their toolbox is different. While it is panel-like for original plasma-netbook containments, it is the classical toolbox from plasma-desktop for desktop and folderview.

* These containments are not lockable.

* "Add widgets" action shows the widget explorer but it disappears inmediately.

* Folderview containments feature an icon for the pages widget, but it does not reflect the chosen icon for the set place in folderview.

See bug #228286 which is a particular case of this bug.
Comment 1 Aaron J. Seigo 2010-05-14 02:21:07 UTC
*** Bug 228286 has been marked as a duplicate of this bug. ***
Comment 2 Aaron J. Seigo 2010-05-14 02:21:54 UTC
"Their toolbox is different."

that would be the "not designed for netbook" part :)

"Folderview containments feature an icon for the pages widget,"

screenshot?

thanks.
Comment 3 David Palacio 2010-05-14 15:42:41 UTC
Created attachment 43585 [details]
screenshot

(In reply to comment #2)
> "Their toolbox is different."
> 
> that would be the "not designed for netbook" part :)
IMO, they should be outside-of-containment actions unaware. That is, they should not handle the toolbox.

> "Folderview containments feature an icon for the pages widget,"
> 
> screenshot?
> 
> thanks.
In attached screenshot "Uni" and "Libros" are folderview activities, er, pages.
In Places, each has set a different icon.
Comment 4 Marco Martin 2010-05-21 19:56:14 UTC
SVN commit 1129234 by mart:

if the lock widgets action is available, display that one instead of lock page
CCBUG: 237564


 M  +9 -1      newspaper/newspaper.cpp  
 M  +10 -1     sal/sal.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1129234
Comment 5 Marco Martin 2010-05-21 20:00:13 UTC
the icon is the one of the plugin, that is the same folder for all folderviews.
at the moment there is no way for the activity bar to know what icon was personalized for the folder.
it would be nice tough, so something can be tought about
Comment 6 Marco Martin 2010-05-21 21:10:25 UTC
SVN commit 1129259 by mart:

don't remove the remove action in sal: remove it in netcorona
so when in desktop it will still be possible to remove it
CCBUG:237564


 M  +4 -0      containments/newspaper/appletscontainer.cpp  
 M  +4 -4      containments/sal/sal.cpp  
 M  +12 -0     shell/netcorona.cpp  
 M  +1 -0      shell/netcorona.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1129259
Comment 7 Marco Martin 2010-07-30 14:49:32 UTC
SVN commit 1157192 by mart:

netcorona wants org.kde.nettoolbox as default toolbox
sal and newspaper try to load the corona preferred toolbox, the default
one will fallback

when they are loaded in plasma-desktop will have the default toolbox and
actions

BUG:237564
BUG:243879


 M  +6 -7      containments/newspaper/newspaper.cpp  
 M  +9 -7      containments/sal/sal.cpp  
 M  +1 -0      shell/netcorona.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1157192