netcorona wants org.kde.nettoolbox as default toolbox sal and newspaper try to load the corona preferred toolbox, the default one will fallback

when they are loaded in plasma-desktop will have the default toolbox and
actions

BUG:237564
BUG:243879

svn path=/trunk/KDE/kdebase/workspace/; revision=1157192